fix(admin-theme): button contrast on primary colors aside from blue

--- a/web/themes/custom/ys_admin_theme/scss/gin-custom.scss
+++ b/web/themes/custom/ys_admin_theme/scss/gin-custom.scss
@@ -219,7 +219,7 @@ tbody .views-field:not(.views-field-operations) a {
 }
 
 .gin--dark-mode [data-drupal-selector="edit-enable-darkmode"] .form-radios .form-item__label {
-  --gin-color-title: var(--gin-color-text-light);
+  --gin-color-title: var(--wool);
 }
 
 .gin--dark-mode .button,
